# RadishFlow

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/rulesets/: README.md  master-protection.json
.github/workflows/: pr-check.yml  release-check.yml
.run/: Run Test All.run.xml  Run Test radishflow-studio.run.xml  Run Test rf-ui.run.xml  Run radishflow-studio.run.xml
adapters/dotnet-capeopen/: RadishFlow.CapeOpen.sln
apps/radishflow-studio/: Cargo.toml  build.rs
apps/radishflow-studio/src/: app_facade.rs  auth_cache_sync.rs  bootstrap.rs  control_plane_client.rs  control_plane_sync.rs  document_history_driver.rs  document_lifecycle_driver.rs  entitlement_control.rs  entitlement_panel_driver.rs  entitlement_preflight.rs  entitlement_session_driver.rs  entitlement_session_host.rs  entitlement_session_host_presentation.rs  entitlement_session_host_runtime.rs  inspector_draft_driver.rs  inspector_target_driver.rs  lib.rs  main.rs  property_package_download.rs  property_package_download_client.rs  run_panel_driver.rs  solver_bridge.rs  studio_app_host.rs  studio_document_history_command.rs  studio_example_projects.rs  studio_gui_canvas_presentation.rs  studio_gui_canvas_widget.rs  studio_gui_command_registry.rs  studio_gui_driver.rs  studio_gui_host.rs  studio_gui_layout_store.rs  studio_gui_platform_host.rs  studio_gui_platform_timer_driver.rs  studio_gui_preferences_store.rs  studio_gui_shell.rs  studio_gui_shortcut_router.rs  studio_gui_snapshot.rs  studio_gui_timer_host.rs  studio_gui_window_layout.rs  studio_gui_window_model.rs  (+12 more)
apps/radishflow-studio/src/app_facade/: tests.rs
apps/radishflow-studio/src/auth_cache_sync/: mod.rs  tests.rs
apps/radishflow-studio/src/bootstrap/: mod.rs  runtime.rs  seed.rs  temp_cache.rs  tests.rs
apps/radishflow-studio/src/control_plane_client/: tests.rs  utils.rs
apps/radishflow-studio/src/entitlement_session_host/: mod.rs  tests.rs
apps/radishflow-studio/src/property_package_download_client/: mod.rs  tests.rs
apps/radishflow-studio/src/studio_app_host/: mod.rs  projection.rs  tests.rs
apps/radishflow-studio/src/studio_app_host/tests/: commands.rs  controller.rs  snapshot.rs  store.rs
apps/radishflow-studio/src/studio_gui_canvas_presentation/: mod.rs  tests.rs  view_model.rs
apps/radishflow-studio/src/studio_gui_command_registry/: mod.rs  tests.rs
apps/radishflow-studio/src/studio_gui_driver/: command_surface_tests.rs  interaction_tests.rs  layout_tests.rs  mod.rs  test_support.rs  timer_tests.rs
apps/radishflow-studio/src/studio_gui_host/: core.rs  dispatch.rs  drop_tests.rs  helpers.rs  interaction_tests.rs  layout.rs  layout_tests.rs  mod.rs  test_support.rs
apps/radishflow-studio/src/studio_gui_platform_host/: mod.rs  tests.rs
apps/radishflow-studio/src/studio_gui_platform_host/tests/: combined_execution.rs
apps/radishflow-studio/src/studio_gui_shell/: app.rs  chrome.rs  fonts.rs  home_dashboard.rs  locale.rs  mod.rs  panels.rs  project_picker.rs  tests.rs  timer_tests.rs  utils.rs
apps/radishflow-studio/src/studio_gui_shell/panels/: canvas.rs  commands.rs  mod.rs  runtime.rs
apps/radishflow-studio/src/studio_gui_shell/tests/: basic.rs  canvas.rs  command_palette.rs  command_surface.rs  project_lifecycle.rs  runtime.rs  runtime_synthetic_flash_inlet_boundary.rs
apps/radishflow-studio/src/studio_gui_window_layout/: helpers.rs  mod.rs  model.rs  state.rs  tests.rs
apps/radishflow-studio/src/studio_gui_window_model/: drop_preview.rs  mod.rs  result_inspector.rs  test_support.rs  tests.rs
apps/radishflow-studio/src/studio_gui_window_model/tests/: synthetic_near_boundary_focus.rs
apps/radishflow-studio/src/studio_window_host_manager/: mod.rs  tests.rs
bindings/c/: README.md
crates/rf-canvas/: Cargo.toml
crates/rf-ffi/: Cargo.toml
crates/rf-ffi/src/: engine.rs  lib.rs
crates/rf-flash/: Cargo.toml
crates/rf-flash/src/: lib.rs
crates/rf-flash/tests/: golden.rs
crates/rf-flowsheet/: Cargo.toml
crates/rf-flowsheet/src/: lib.rs
crates/rf-model/: Cargo.toml
crates/rf-solver/: Cargo.toml
crates/rf-solver/src/: lib.rs  tests.rs
crates/rf-store/: Cargo.toml
crates/rf-thermo/: Cargo.toml
crates/rf-thermo/src/: lib.rs
crates/rf-thermo/tests/: golden.rs
crates/rf-types/: Cargo.toml
crates/rf-ui/: Cargo.toml
crates/rf-ui/src/: auth.rs  canvas_interaction.rs  commands.rs  diagnostics.rs  entitlement_panel.rs  entitlement_panel_presenter.rs  entitlement_panel_text.rs  entitlement_panel_view.rs  entitlement_panel_widget.rs  ids.rs  lib.rs  run.rs  run_panel.rs  run_panel_presenter.rs  run_panel_text.rs  run_panel_view.rs  run_panel_widget.rs  state.rs  tests.rs
crates/rf-ui/src/state/: actions.rs
crates/rf-ui/src/tests/: canvas.rs  entitlement.rs  inspector.rs  recovery.rs  run_panel.rs
crates/rf-unitops/: Cargo.toml
crates/rf-unitops/src/: lib.rs
docs/: README.md  radishflow-architecture-draft.md  radishflow-capeopen-asset-checklist.md  radishflow-mvp-roadmap.md  radishflow-startup-checklist.md
docs/adr/: 0001-branch-and-pr-governance.md
docs/architecture/: app-architecture.md  auth-entitlement-architecture.md  canvas-interaction-contract.md  open-source-references.md  overview.md  studio-ui-design-guidelines.md  versioning.md
docs/capeopen/: boundary.md  pme-validation.md
docs/development/: code-style.md
scripts/: check-doc-size.ps1  check-doc-size.sh  check-repo.ps1  check-repo.sh  check-text-files.ps1  check-text-files.sh  configure-pme-dumps.ps1  gen-bindings.ps1  gen-typelib.ps1  normalize-text-files.ps1  package.ps1  pme-register-latest.ps1  pme-unregister.ps1  register-com.ps1  smoke-test.ps1
tests/rust-integration/: Cargo.toml  README.md
tests/rust-integration/src/: lib.rs
tests/rust-integration/tests/: flowsheet_examples.rs  flowsheet_synthetic_flash_inlet_boundary.rs  studio_solver_bridge.rs  studio_solver_bridge_flash_inlet_boundary.rs  studio_workspace_control.rs  studio_workspace_control_flash_inlet_boundary.rs
xtask/: Cargo.toml
(+1109 files in other folders)
