[package]
name = "radishflow-studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
eframe = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rf-flash = { path = "../../crates/rf-flash" }
rf-model = { path = "../../crates/rf-model" }
rf-solver = { path = "../../crates/rf-solver" }
rf-store = { path = "../../crates/rf-store" }
rf-thermo = { path = "../../crates/rf-thermo" }
rf-types = { path = "../../crates/rf-types" }
rf-ui = { path = "../../crates/rf-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
rfd = { version = "0.15", default-features = false }
