[package]
name = "rf-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rf-flash = { path = "../rf-flash" }
rf-solver = { path = "../rf-solver" }
rf-store = { path = "../rf-store" }
rf-thermo = { path = "../rf-thermo" }
rf-types = { path = "../rf-types" }
serde_json = "1"
