[package]
name = "rf-flowsheet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
rf-model = { path = "../rf-model" }
rf-types = { path = "../rf-types" }
rf-unitops = { path = "../rf-unitops" }
