[package]
name = "rf-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
rf-flash = { path = "../rf-flash" }
rf-flowsheet = { path = "../rf-flowsheet" }
rf-model = { path = "../rf-model" }
rf-thermo = { path = "../rf-thermo" }
rf-types = { path = "../rf-types" }
rf-unitops = { path = "../rf-unitops" }

[dev-dependencies]
rf-store = { path = "../rf-store" }
