[package]
name = "rf-thermo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
rf-store = { path = "../rf-store" }
rf-types = { path = "../rf-types" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
