[package]
name = "rf-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
rf-model = { path = "../rf-model" }
rf-solver = { path = "../rf-solver" }
rf-types = { path = "../rf-types" }

[dev-dependencies]
rf-flash = { path = "../rf-flash" }
rf-store = { path = "../rf-store" }
rf-thermo = { path = "../rf-thermo" }
